--- a/src/components/Theme.scss
+++ b/src/components/Theme.scss
@@ -266,6 +266,7 @@
     --color-background-chat-sent: var(--color-slate-12);
     --color-background-chat-tagged: var(--color-slate-12);
     --color-chat-user-presence-indicator-default: var(--color-slate-15);
+    --color-text-chat-time: var(--color-grey-6);
 
     --color-icon: var(--color-opac-w-8);
     --color-icon-hover: var(--color-opac-w-12);
